# ChangeLog for games-arcade/stepmania
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/stepmania/Attic/ChangeLog,v 1.27 2009/01/19 19:53:21 mr_bones_ Exp $

  19 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org> stepmania-3.9.ebuild:
  EAPI=2; add use-based dep

  24 Nov 2008; <ssuominen@gentoo.org> stepmania-3.9.ebuild:
  Move patchset tarball out of my old dev space to gentoo mirrors.

  24 Nov 2008; <ssuominen@gentoo.org> metadata.xml:
  Remove my old e-mail from metadata.xml. I don't play this.

  15 Oct 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/stepmania-3.9-newerffmpeg.diff, stepmania-3.9.ebuild:
  Fix for ffmpeg 20081014. Bug 242054.

  29 Jul 2008; Samuli Suominen <drac@gentoo.org> stepmania-3.9.ebuild:
  Bump ffmpeg dep. for last change to 0.4.9_p20080326 wrt #232364.

  21 Jun 2008; Hanno Boeck <hanno@gentoo.org>
  +files/stepmania-3.9-newffmpeg.diff, stepmania-3.9.ebuild:
  Fix paths for latest ffmpeg.

  14 Apr 2008; Samuli Suominen <drac@gentoo.org> stepmania-3.9.ebuild:
  Bumping patch level to 3 for bug 216128, GCC 4.3 compability patch by
  David Carlos Manuelda.

  08 Mar 2008; Samuli Suominen <drac@gentoo.org> stepmania-3.9.ebuild:
  Bump patchset to fix bug 203935, configure dying without ffmpeg available.

  15 Sep 2007; Samuli Suominen <drac@gentoo.org> stepmania-3.9.ebuild:
  Changed SRC_URI to gentoo mirrors.

  07 Aug 2007; Samuli Suominen <drac@gentoo.org>
  -files/stepmania-3.9-64bits.patch, -files/stepmania-3.9-alias.patch,
  -files/stepmania-3.9-alsa.patch, -files/stepmania-3.9-crashfix.patch,
  -files/stepmania-3.9-ffmpeg.patch,
  -files/stepmania-3.9-ffmpeg-stdint.patch,
  -files/stepmania-3.9-gcc41.patch, -files/stepmania-3.9-gettid.patch,
  -files/stepmania-3.9-lua51.patch, -files/stepmania-3.9-sdl.patch,
  -files/stepmania-3.9-vorbis.patch, stepmania-3.9.ebuild: