@@ -4,6 +4,6 @@ AUX stepmania-3.9-newffmpeg.diff 527 RMD160 b78e8cd88ad14605afb4bf7c1876b02fe8b4
 DIST StepMania-3.9-linux.tar.gz 10174400 RMD160 426b11d652669be85753161f2cd03f2fe81df860 SHA1 100b1a2771fec1d208798ef03ba164259a589bf2 SHA256 ccb6e549e8d026e79de7d6bbfadc7f1ac7f7c05242a90edf56cf652f5ddeaae0
 DIST StepMania-3.9-src.tar.gz 3090223 RMD160 e7451192fe67f53a7a93baf99bf9a20bc3d1f7cf SHA1 b2d2c3a50c23506844ba7e22289e59d270bb8b2e SHA256 31082d388fa64b9764aee4d7628f377bc0fe47b8f157b8bcc66d9e3678479c85
 DIST stepmania-patches-3.tar.bz2 10043 RMD160 6d120931f7482fbe2908eb4d3f34a8b3e4a99b5d SHA1 26b835c0316b07a42d92ede3ecd51485a477d845 SHA256 e5f988b7e404846612f5bb327d0c3bbf2552de0ef20fde9943510b00fc54502c
-EBUILD stepmania-3.9.ebuild 2172 RMD160 f128378da0bcc49f485958a4037b629266645aa3 SHA1 cf22542d7a7df2587ad5ca03f50f6effd7acc7ea SHA256 32798944aee63cb5c54e29358edae4b4e328f82d50d256326a1e291597c01d6f
-MISC ChangeLog 5210 RMD160 145b8e66539d66f60f658b34471ea1d69f10eeaa SHA1 010a0421bbd1c3ca73b42be5e235c0aa1e7c537f SHA256 fcbe259ff8e784a0d80051b35818e13aae34c19a7372546f5859a26c03ab1fad
+EBUILD stepmania-3.9.ebuild 2174 RMD160 3e3d9c3355fd78c5cd3a0c36f7620787e14687e0 SHA1 609143aa75e4ffe9422f2a329ff9c5765a64bceb SHA256 d4485b402c2ae33f998d78004e8dd1789f8214dd950d7b24de7cab13b11333c0
+MISC ChangeLog 5327 RMD160 056b8a793e033e437e0a6f985d07aa8e1a5ec931 SHA1 3f8b848f4ff6ed24fcef43903a87f56252a6836f SHA256 da7ac5086062f3cbabf1e149d0b201ba182ebf0b34c580bd09364ac03975d34d
 MISC metadata.xml 227 RMD160 ec3da4cb57b0b3b31ced53a9aaf1a50b9aaf5476 SHA1 723fc50dd6141178345702256cb1ee7d8b2b41d0 SHA256 90d49a5ff32830c23dbd4940874b3fe1351f948d38c5e3c9c93220b7b0496814
